sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:3: error: not found: type int
	var lgr: int = getNombreValeurs();
                 ^AlgCombSort:4: error: not found: type int
	var ecart: int = lgr;
                   ^AlgCombSort:5: error: not found: type boolean
	var chgt: boolean = true;
                  ^AlgCombSort:6: error: not found: type int
	var i: int = 0;
               ^