sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
	var lgr: int = getNombreValeurs();
	var ecart: int = lgr;
	var chgt: boolean = true;
	var i: int = 0;
	while (chgt || ecart > 1){
		if (ecart > 1){
			ecart = ecart/1.3;
		}
		i=0;
		while (i+ecart < lgr){
			if (plusPetit(i+ecart,i)){
				echange(i+ecart,i);
				i=i+1;
			}	
		}
	}
	
	

}
